fix of image icons

--- a/src/mzkit/mzkit/pages/dockWindow/explorer/frmFileExplorer.resx
+++ b/src/mzkit/mzkit/pages/dockWindow/explorer/frmFileExplorer.resx
@@ -126,6 +126,9 @@
   <metadata name="Button1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="Button1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="ImageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -134,7 +137,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADk
-        BQAAAk1TRnQBSQFMAwEBAAEwAQABMAEAARgBAAEYAQAE/wEZAQAI/wFCAU0BNgcAATYDAAEoAwABYAMA
+        BQAAAk1TRnQBSQFMAwEBAAE4AQABOAEAARgBAAEYAQAE/wEZAQAI/wFCAU0BNgcAATYDAAEoAwABYAMA
         ARgDAAEBAQABGAYAARsYAAL1AfT/ABsAA/ABlgGRAY0BugG1Aa7/ABgAA+8BsQGrAaEBfAFxAWEBugG2
         Aa7/ABgAAd4B3AHZAZwBkwGEAYUBewFqAcsBxwHC/wAYAAHpAegB5gGZAZEBgwGFAXoBawG6AbUBrf8A
         GAAC6QHnAaABlwGJAXwBcQFhAboBtgGu/wAYAAHgAd4B2wGfAZcBiQGFAXsBagHLAccBwv8AGAAB6gHp
@@ -953,6 +956,93 @@
         AAUIoAcCeAQCaELfwCIx4zPiwWaaaeb+iHiwmWaauT8iHmymmWbuj4gHm2mmmfsj4sFmmmnm/oh4sJlm
         mrk/Ih5spplm7o+IB5tpppn7I+LBZppp5v6IeLCZZpq5PyIebKaZZu6PiAebaaaZ+yPiwWaaaeb+iHiw
         mWaauT8iHmymmWbuj4gHm2mmmfsh6sz/D23eCO/hlKLAAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="ImageList2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>284, 17</value>
+  </metadata>
+  <data name="ImageList2.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADS
+        EQAAAk1TRnQBSQFMAgEBBQEAAQgBAAEIAQABEAEAARABAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEYBgABGBUAA/En9pMAA/ED9gEAAcwB/wEAAcwB/wEAAcwB/wEAAcwB/wEAAcwB/wEA
+        AcwB/wEAAcwB/wEAAcwB/wEAAcwB/wEAAcwB/wEAAcwB/wEAAcwB/wFcAdwB/AP2kAAD9AG5AewB+AEA
+        AcwB/wEAAcwB/wEAAcwB/wEAAcwB/wEAAcwB/wEAAWYBgAQAAcwB/wEAAcwB/wEAAcwB/wEAAcwB/wEA
+        AcwB/wEAAcwB/wP2kwAD9gEAAcwB/wEAAcwB/wEAAcwB/wEAAcwB/wEAAcwB/wcAAcwB/wEAAcwB/wEA
+        AcwB/wEAAcwB/wEAAcwB/wG5AewB+AP0kwAD9AG5AewB+AEAAcwB/wEAAcwB/wEAAcwB/wEAAcwB/wEA
+        AcwB/wEAAcwB/wEAAcwB/wEAAcwB/wEAAcwB/wEAAcwB/wEAAcwB/wP2mQAD9gEAAcwB/wEAAcwB/wEA
+        AcwB/wEAAcwB/wcAAcwB/wEAAcwB/wEAAcwB/wEAAcwB/wG5AewB+AP0mQAD9AG5AewB+AEAAcwB/wEA
+        AcwB/wEAAcwB/wcAAcwB/wEAAcwB/wEAAcwB/wEAAcwB/wP2nwAD9gEAAcwB/wEAAcwB/wEAAcwB/wcA
+        AcwB/wEAAcwB/wEAAcwB/wG5AewB+AP0nwAD9AGpAekB+QEAAcwB/wEAAcwB/wcAAcwB/wEAAcwB/wEA
+        AcwB/wP2pQAD9gEAAcwB/wEAAcwB/wcAAcwB/wEAAcwB/wGaAeYB+QP0pQAD9AGaAeYB+QEAAcwB/wcA
+        AcwB/wEAAcwB/wP2qwAD9gEAAcwB/wEAAcwB/wEAAcwB/wEAAcwB/wGaAeYB+QP0qwAD9AGaAeYB+QEA
+        AcwB/wEAAcwB/wEAAcwB/wP2sQAD9gEAAcwB/wEAAcwB/wGaAeYB+QP0sQAD9AGaAeYB+QEAAcwB/wP2
+        twAG9gP0qAAG/gP6A+oD7gP9Bv4D+APpA/EG/gP/BgAG/gP6A+oD7gP9Bv4D+APpA/EG/gP/CQAD7Qbr
+        BuoD6QbnBuYG5QP3BgAD/QERAUMBjwERAUMBjwERAUMBjwERAUMBjwERAUMBjwERAUMBjwERAUMBjwER
+        AUMBjwERAUMBjwERAUMBjwERAUMBjwkAA/8D8gE2AccB/wEvAa0B3QHSAXcBAwHSAXcBAwE0AcAB9gE2
+        AccB/wE2AccB/wGkAVIBAgGkAVIBAgGkAVIBAgE1AcQB+wE2AccB/wP8AwAD/wPyATYBxwH/AS8BrQHd
+        AdIBdwEDAdIBdwEDATQBwAH2ATYBxwH/ATYBxwH/AaQBUgECAaQBUgECAaQBUgECATUBxAH7ATYBxwH/
+        A/wJAAPuA+0G7APrAcgBvAG+AaEBiQGMAdYC0AGhAYkBjAPnAdgC1APmA/cGAAP9AekB6AHnAekB6AHn
+        AekB6AHnAekB6AHnAekB6AHnAekB6AHnAekB6AHnAekB6AHnAekB6AHnAekB6AHnAekB6AHnCQAD/wHq
+        AuwBQwHLAf8BOgGwAd0B0QF3AQMB0QF3AQMBQAHEAfYBQwHLAf8BQwHLAf8BpAFUAQIBpAFUAQIBpAFU
+        AQIBQgHIAfsBQwHLAf8D+wMAA/8B6gLsAUMBywH/AToBsAHdAdEBdwEDAdEBdwEDAUABxAH2AUMBywH/
+        AUMBywH/AaQBVAECAaQBVAECAaQBVAECAUIByAH7AUMBywH/A/sJAAPvBu4D7QbsA+sG6gbpA+cD9wYA
+        A/0B5QHFAVkB4wHDAVUB4gHBAVIB4AG/AU4B3wG9AUsB3QG7AUcB3AG5AUQB2wG4AUEB2QG2AT8B2AG1
+        ATwB2AG0AToJAAP/AeoC7AFOAc4B/wFEAbMB3QHRAXcBAwHRAXcBAwE+AaQBywFAAagB0AFAAagB0AGj
+        AVUBAwGjAVUBAwGjAVUBAwFNAcsB+wFOAc4B/wP7AwAD/wHqAuwBTgHOAf8BRAGzAd0B0QF3AQMB0QF3
+        AQMBPgGkAcsBQAGoAdABQAGoAdABowFVAQMBowFVAQMBowFVAQMBTQHLAfsBTgHOAf8D+wkAA/ID7wG1
+        AaQBpgbuA+0BoQGJAYwByQG9Ab8D6wG0AaMBpQPqA+kD9wYAA/0B5gHHAV0B5QHFAVkB4wHDAVUB4gHB
+        AVIB4AG/AU4B3wG9AUsB3QG7AUcB3AG5AUQB2wG4AUEB2QG2AT8B2AG1ATwJAAP/AeoC7AFYAdEB/wFN
+        AbUB3QHQAXYBAwHTAY4BIQHTAY4BIQHTAY4BIQHTAY4BIQHTAY4BIQGjAVYBAwGjAVYBAwFXAc4B+wFY
+        AdEB/wP7AwAD/wHqAuwBWAHRAf8BTQG1Ad0B0AF2AQMB0wGOASEB0wGOASEB0wGOASEB0wGOASEB0wGO
+        ASEBowFWAQMBowFWAQMBVwHOAfsBWAHRAf8D+wMAA/MB3AHYAdUS8wGcAY0BhQbtA+wG6wP3BgAD/QHo
+        AckBYAHmAccBXQGTAXABBQGTAXABBQGTAXABBQGTAXABBQGTAXABBQGTAXABBQGTAXABBQHbAbgBQQHZ
+        AbYBPwkAA/8B6gLsAWEB1AH+AVgBwQHnAd4BjwEaAd4BjwEaAd4BjwEaAd4BjwEaAd4BjwEaAd4BjwEa
+        Ad4BjwEaAaIBVgEDAWAB0gH8AWEB1AH+A/sDAAP/AeoC7AFhAdQB/gFYAcEB5wHeAY8BGgHeAY8BGgHe
+        AY8BGgHeAY8BGgHeAY8BGgHeAY8BGgHeAY8BGgGiAVYBAwFgAdIB/AFhAdQB/gP7AwAD8wHcAdgB1RLz
+        AZ0BjgGFBu4D7QGhAYkBjAPsA/cGAAP9AekBywFkAegByQFgAeYBxwFdAeUBxQFZAeMBwwFVAeIBwQFS
+        AeABvwFOAd8BvQFLAd0BuwFHAdwBuQFEAdsBuAFBCQAD/wHrAuwBaAHWAf4BaAHVAf0BZgHTAfoBZgHT
+        AfoBZgHTAfoBZgHTAfoBZgHTAfoBZgHTAfoBZgHTAfoBZwHUAfwBaAHWAf4BaAHWAf4D+wMAA/8B6wLs
+        AWgB1gH+AWgB1QH9AWYB0wH6AWYB0wH6AWYB0wH6AWYB0wH6AWYB0wH6AWYB0wH6AWYB0wH6AWcB1AH8
+        AWgB1gH+AWgB1gH+A/sDAALhAeAB3AHYAdYC4QHgAeEB4AHfAuEB4ALhAeAB4QHgAd8C4QHgAZ4BjwGH
+        Bu8J7gP3BgAD/QHrAc0BaAHpAcsBZAHoAckBYAHmAccBXQHlAcUBWQHjAcMBVQHiAcEBUgHgAb8BTgHf
+        Ab0BSwHdAbsBRwHcAbkBRAkAA/8B6wLsAW4B2AH+AW4B2AH+AW4B2AH+AW4B2AH+AW4B2AH+AW4B2AH+
+        AW4B2AH+AW4B2AH+AW4B2AH+AW4B2AH+AW4B2AH+AW4B2AH+A/sDAAP/AesC7AFuAdgB/gFuAdgB/gFu
+        AdgB/gFuAdgB/gFuAdgB/gFuAdgB/gFuAdgB/gFuAdgB/gFuAdgB/gFuAdgB/gFuAdgB/gFuAdgB/gP7
+        AwAD/AHdAdkB1hL8AaABkQGIA/IG8QPvA+4D9wYAA/0B7QHPAWsB6wHNAWgBkwFwAQUBkwFwAQUBkwFw
+        AQUBkwFwAQUBkwFwAQUBkwFwAQUBkwFwAQUB3wG9AUsB3QG7AUcJAAP/Ae0C7gFzAdkB/QFzAdkB/QFz
+        AdkB/QFzAdkB/QFzAdkB/QFzAdkB/QFzAdkB/QFzAdkB/QFzAdkB/QFzAdkB/QFzAdkB/QFzAdkB/QP7
+        AwAD/wHtAu4BcwHZAf0BcwHZAf0BcwHZAf0BcwHZAf0BcwHZAf0BcwHZAf0BcwHZAf0BcwHZAf0BcwHZ
+        Af0BcwHZAf0BcwHZAf0BcwHZAf0D+wMAA/sB3wHcAdkS+wGhAZIBigHvAu0G8wPyA/ED9wYAA/0B7gHR
+        AW8B7QHPAWsB6wHNAWgB6QHLAWQB6AHJAWAB5gHHAV0B5QHFAVkB4wHDAVUB4gHBAVIB4AG/AU4B3wG9
+        AUsMAAHxAesB3gHIAacBPQF3AVEBKQHGAZ8BUwHDAZUBYwGqAWwBUQF1AdoB/QF1AdoB/QF1AdoB/QF1
+        AdoB/QF1AdoB/QF1AdoB/QF1AdoB/QP8BgAB+wL8AQQBgwG8AeEB6AHsAbYBowGLAdoB4gHlAcABtgGp
+        AXUB2gH9AXUB2gH9AXUB2gH9AXUB2gH9AXUB2gH9AXUB2gH9AXUB2gH9A/wDAAHkAeEB3wHVAdABzAHk
+        AeEB3wHkAeEB3wHkAeEB3wHkAeEB3wHkAeEB3wHkAeEB3wGXAYQBfAGhAYkBjAGhAYkBjAP1A/QD9QP3
+        BgAD/QHvAdMBcgHuAdEBbwHtAc8BawHrAc0BaAHpAcsBZAHoAckBYAHmAccBXQHlAcUBWQHjAcMBVQHi
+        AcEBUgHgAb8BTgwAAekBuwFWAc0BrAE/Ac0BrAE/AcwBqQFJAdMB3wHeAcoBnQFrAdoBkgFoAdoBrwFz
+        AdkBrgF3AcoBowF7AcsBkwFLAbkBiAFUA2MD/gYAA/0B5gHwAfQB5AHtAfABtAFkAQwBzwHXAdoB5AHl
+        AeYBzgGEARkD0APdA8EDwwPVA/oD/gMAAcQBsAGjAbUBngGRAcQBrwGiAcMBrwGiAcMBrgGiAcIBrgGh
+        AcIBrQGhAcIBrQGhAaUBjwGBAeAB2gHbAaEBiQGMAdABxAHHA/kD+AP3BgAD/QHxAdQBdQHvAdMBcgGT
+        AXABBQGTAXABBQGTAXABBQGTAXABBQGTAXABBQGTAXABBQGTAXABBQHjAcMBVQHiAcEBUg8AARQBoQHO
+        Ac0BrQE/Ac0BrQE/AdQB6AHvAcsBoQFfA3gB6QHAAXEB2wG3AXYDdQN0A3IDbgwAAQUBnwHZAasB2wHt
+        AeYB8AH0AeYB7wHyAfAB8QHyAdQBzwHLAdYBpgFfAfIB7QHnAdUBhwEZAdkBjAEcA+QD/wYAAfgB9QH0
+        AfAB7QHqAegB4gHeAeIB2gHVAd8B1wHRAeAB2AHTAeAB1wHRAeEB2AHWAdgB0QHOA/kD+gP7A/oD7gP+
+        BgAD/wHyAdYBeAHxAdQBdQHvAdMBcgHuAdEBbwHtAc8BawHrAc0BaAHpAcsBZAHoAckBYAHmAccBXQHl
+        AcUBWQHjAcMBVRgAAeoBvAFYAekBtwFlA38GewN4A/AD5QNxFQAD/QPiA/UD8QP1CegD/wwAA/oG+AGh
+        AYkBjAP5A/oB0QHFAcgD+wP8A5oB9QH2AfUD6gwAAfMB1wF6AfIB1gF4AfEB1AF1Ae8B0wFyAe4B0QFv
+        Ae0BzwFrAesBzQFoAekBywFkAegByQFgAeYBxwFdAeUBxQFZHgADggOAA3wDewN5A3gDdDwAA/sD+Qb6
+        BvsG/AP7A6AD+A8AAfQB2QF8AfMB1wF6AfIB1gF4AfEB1AF1Ae8B0wFyAe4B0QFvAe0BzwFrAesBzQFo
+        AekBywFkAegByQFgAeYBxwFdbwAD/QP6BvsG/AP9A/sD7wP/FQABkwFwAQUGAAGTAXABBQMAAZMBcAEF
+        BgABkwFwAQXJAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/AQABgAEBFgABgAcA
+        AYABAQYAAcABAQYAAcABAwYAAeABAwYAAeABBwYAAfABBwYAAfABDwYAAfgBDwYAAfgBHwYAAfwBHwYA
+        AfwBPwYAAf4BPwYAAcABAAHAAQAB4AEAAcABAwGAAQABgAEAAeABAAHAAQMBgAEAAYABAAHgAQABwAED
+        AYABAAGAAQAB4AEAAcABAwGAAQABgAEAAYABAAHAAQMBgAEAAYABAAGAAQABwAEDAYABAAGAAQABgAEA
+        AcABAwGAAQABgAEAAYABAAHAAQMBgAEAAYABAAGAAQABwAEDAcABAAHAAQABgAEAAcABAwHAAQABwAEA
+        AYABAAHAAQMB4AEBAeABAQGAAQABwAEDAfwBAQH8AQEB4AEBAeABAwH/AQEC/wHgAQMB4AEDBP8B4AEH
+        AfYBtwj/Cw==
 </value>
   </data>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
