tweaks of the ui details

--- a/src/mzkit/mzkit/pages/toolkit/PageSpectrumSearch.resx
+++ b/src/mzkit/mzkit/pages/toolkit/PageSpectrumSearch.resx
@@ -590,6 +590,218 @@
   <metadata name="ContextMenuStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>174, 17</value>
   </metadata>
+  <data name="SavePreviewPlotToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccqhmAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAADBgSURBVHhe7X0HmBVVtjW+f8ano4iKIqJkOrcBdd4b06iDIklMgIJkaHI3oCKSJYhkARFUVHTU
+        ETCMoKOoMIZRTAgYAEF8SkayAt1Ad7v/s6pq47E8t/uGupeqe/f6vvXRdN9bdWqfvdaJVVVBIBAIBAKB
+        QCAQCAQCgUAgEAgEAoFAIBAIBAKBQCAQCAQCgUAgEAgEAoFAIBAIBAKBQCAQCAQCgUAgEAgEAoFAIBAI
+        BAKBQCAQCAQCgUAgEAgEjOMCSIFAUAZMoklFCgQpAVPyg/+VojTFAhQIkgamBNdF8P/C5B8CSNN1uKnH
+        AnTHSiAIJNyJzAnuFoAumD+mCPVr1mOhGwGox08gCAz0xHWLXk9+gQ09JiYz0OMpEPgWeqJy8uqiR+t3
+        FDWazjw1vefGSzLztjXJ6Lm3Y0aPnzpl9NhrZHr3XZ2DRNM12FTXqK41M29Hk7TuG/9creHk05xwAIib
+        3kNwmwHHViDwHUzCZ/EjqfG7Cqc0eqZidkFh6+z8Iy/k9CndmJNPdF5/ovPvTC3imnPVtef0+WUjYpGd
+        X9gGsUGMFBA3txG4TUCMQOAbmMTPwj9eETguu09Rt9y+pWvPv0uJQDG3AAJQ7J2iVNeOGPwaj9J1WQVF
+        3RErO2RW7NgI2FDFBAS+AieiLnwW/38rVqjVdXNaTkHJ4vPvVi1fP4MQhBYRG8QIsarVeXM6YqeAGJp6
+        A2ICgmMOk/i51bfEn95tz+U5/Uq3WYltSHrh72nFqm/J9nrddlyJGCoglu7egJiA4JiiLPGfoFghPe/H
+        S1WXf+/5arxrSnRhaFpzBH1L96V32nI5YqmAmJZlAgJBwlCu+GvetqJmdn7JNkx4mRJcWD5hnCqG26u3
+        /bgWYqogJiA45nCLH9TFj+7qcVk9D78p3f7YiRhm9jz8NmLqxFY3AY6/mIAgYWDxswGw+JGcf1KskNF5
+        YxvMapsSWhg5Ecv0zpvaIrYKiLF7ToDrQwxAEFdwK8PiR/Kx+E9UPKFC1fonZvcq/lLG/d4RsczqVfx1
+        hfrN7BjbsWYTkKGAIGFwix8tEHdLrda/XtuvmmECy5TIwijZx54UrNtuVXPEWAGxZhPgXoBuAgKB5+DW
+        BUnG4kcLxOI/WbFCZo/9s2Xs7z2tuYAe+59AjBUQa8TcPR8gvQBBXKCL39T1P8niKadUzOp1ZJVs9vGe
+        iKmK7eoKFSuecjTeMhQQJAgsfr3117v+2MN+/NlN5lyQ06f0kLXH3ZDEwuiZq4YB2X1KD1dr9PSFiLUT
+        c+4F6EMBricxAIEn4NYESaW3/nrXv5JihbROP+TL7H/8iNjW67ShL2KtgJjzUEB6AYK4wCR+bv25648u
+        KXhCZo+ij2T2P360VgN6HvoYsdbirg8FuBcgJiCIGbr4QRa/3vqjG3qq4nG1WnxwgzX2T+W7+xJAxLhm
+        qw9vRMyd2OtDAdSNaSggJiAIG5wwICcRWhRd/Ghx0P1EC4QEPCmrZ9Eyaf3jT8Q4u9ehz534I/aog7JW
+        BXQTAAWCo9ATQ6cufO76I7H0rj+3/hXSO2+9X5b+EkfEOqPr9rGIvQL3AtyrAmwCoYxApyDAMFVoNOQk
+        YbLw3eLnrr818Ve73ZrWuX3JfrqNIVmF3hOxPk/FvF7bNW1QBwqoC5MJcP3pJsA05UA0FCQQpgrQ6a7k
+        cMktBZMTh7v9bvGjy1mhXvs1t+YWlB5EMpoSVRg/IuYq9oX1On7bAnWhwEMC1JG7J6AbgU5TLoRLU/4x
+        BR7CFGB3ZXBluis4HHJyMJEwuvB5zI/WBUmG8xyXmbe9X27f0mIR/7GjZQKqDjK7be+POnHqBnXEPQHU
+        nW4EuhkwTTkRLjn/mO48BQVRQg+iHmRTRbgrFeQKD5dIEiaShsXPk0sW6nZcXT+rd+EC+xl25sQUJo78
+        TMHsPoUL63Zdc5FTTYBed1yfXL+m+i+PphwD3bmo56qew6CgHLgDpgeTA8yB50qJf2DT00/OyNt0dVZ+
+        4ZM5BaVFstnHf7TqJL/kUE6fojnpXX+4BnXm1F48gdzTcxE0mYGe0/HP14BCD1BZosf/j6Jq/bwTa7ZZ
+        UiO924bLM7puaZjWYev1ZTG9/aZGoZjW7vvGIH7O6LK9dXbvwntz+hTPyc4vWcUtjUz2+ZeoG6uO1NAg
+        O790VXbvI09l9SocpPKijbt+Q9GUMzqRY8g15FzVZnkYZuhAbkZiBgIFPSC68HXRo9vG+K/M3lvqZ/c5
+        2C+7oPTFnPxf1uT0/mUfBIpNIp6xv73chISyxvmywSc4xO3Dqs5Qd6hD1KWxjqOkPfQr/Qm5pxqHl7J7
+        7++f2XMDhh/IWwYPNXQzEBNwwSR8Fv9vhF89b3VViF51wT+2nB7ixAsmMBGEVlkEKkwUVa7xUqT1ohOV
+        izAF1ev4JLvgUD/kqpO2gG4EnN9sBilrBPqF6+LXhY+fK9Ru++GZ2QXFo5Twt7Obi9iFviN6HU6vEbmq
+        cnZ07ds+qoIcVkAuu42A817XQkoglPBZ/JittZDd+0DH3IKSDRcM4G6XUOh/IletnO1buiGr14FOTjoD
+        yG3keFlGkNQIJX5u9a3lNjhndv7hedb4W425TEEWCv1O5C5yOKfP4fk1Wn5yFnJbATleXm8gKVGW+HnN
+        vULdrhsuyskvWXsBulKGoAqFQSNyObegeF3tzlsvRo4r8N4E3QTYCJLSBMISf3rn7X/L6Vu6W16mIUw2
+        WjldULonLW97A+S6QsqYQHnit9ZS63bedHVOQclB6fILk5X2EmLpwTodfvgbcl5Bv2chaU3AJH5c8FHx
+        127/zXlK/LtF/MJkp5XjBSV7anb4+gLkvoJuAmgU2QDYBAINdjFd/HrL/4caTZ87Nad38dfS7RemCpHr
+        2b2PrD67wdOnKw1AF2wC+nCADSCwJlCW+DH+sVr/zO4H/o4lE1OghMJkJXI+s8eBZ6ABBWjBNCcQaBNg
+        8YMsfl7qw11aFdI6rr3ZavllY48w1ahyHrlfr8N3t0ALCvqdi2wCrJ/AGQC7FosfZPFb3Z1T/tynYnbv
+        kjXWzj5TgITCJCdyP7tX8dqK9fPwXEMeFkMjPCnIJsB6CgR08ZvG/XhYQ4X0Llv7yVq/MNUJDaR33cLv
+        OtAfaRbYoYBuALr4uet/wsnn31gpq1fJtzLrL0x1QgOqF7D+5NzWeLjpUY0ouocCgTAAXfzc+utLfvaz
+        9Dqua21tkTQERCj0AzN6ENXoTFStA9G5nRQ72j/jd/ib6TvRElqo137dHdCGAjQCE4BmeCgQmF6AbgDc
+        +usTf7i447J62I/UMgVDGD9m98ILNokye5qJv+Ezpu+mAnMVIW4I/SLVMnebQTRtIdHz7xH9Q/HBBURd
+        pxPV76s+owwBn8V3TMeKhNBCVs+ihdCGIj/dmOcCAtULYPGHav1POPOKEbWze5fukbv74kMIGIlZJ89u
+        rc5xWq7qqhWr1UW1NN3sz5yH+9lxCyuofsbv8Dd8Bp/Fd/BdHAPHwjGT2Rzw8lFcO36e+BLR5l0UEht3
+        Eo17EaJV3+lqf9d9vEhoPUugd+neMy4bXQcacbTCcwGmXoAvwe7EBqC3/nA0ONtxddquvk1m/r0jC5dF
+        W1slJFqoxvcR5akWbOTzRI+9SfTKx0TvryL6fD3Rmk1E67cpbnWofsbv8Dd8ZoH6LL6D76IVxLFwTByb
+        zYSNxFSmoBEChtE1GEL05feOysPA8u+I/nqv/d1YTQCaqNduTWtoxNEKTwhyL8D3wwBd/KbW33qRRkbe
+        rkky+x8b0fKwGNE6XzWIqOcsokcXEX2wmmiLar2KS5ws9QA41pbd9rFxjp4z7XPi3Gw6KJOprH4nuvAo
+        P65nq7rGSPHDj0SXDbBjYTp+uIQmMvJ2T4FGFPjNx4HqBegG4B77w9FwUX/M6nnwTdn2GzmzFVlw6I7f
+        fD/R5H8SffwN0f4iJxsTiAPqnB+vVWV4RZVlLFGmM3ZGGYPUM8DcR1p3uzWPFh+pOqirrhtzKKZzhENo
+        IrPHwbeVRqAbftMRrwiYegG+AgpkMgA4GLoy9qucz6p9Znavw2tk+S98IkHR5a6pupmNRtiC+3qDk3k+
+        Aso0RZWtkRou1FRjacyco+yma/ITMc8x/DnnImLAgDn2sUznCId4vmB2ryPfnFg5B48Rs/USoGEAFwgF
+        RFcFhXV3/yueUr9L3exeJTtlArB88mx0pmpV0OVevJLoSLGTbT7GETVcWPIFUQ9VZrSI3GMxXeOxJsqH
+        sn2z2Sl8DPjyBzWGVz2JaHsBtiZKdlW+sHs9TTP6MACa4mGALw2AW38e/+vdf+sNrpVz+6Zn9yyRFYAy
+        mKFaTYjm/Hyioc8QrdroZFgAsXoT0bBn7WthI/Bi2cwrYux/kxpKeYHSX4iajox+LsBaCehVsvf0i+/M
+        0DWjqA8DfDsPoBsAd//12f/TFE85PbdPhhiAmRg3owuJFgSi+b/tTmYlAb7/0e5m8zX6ZY4Am3sGPOkU
+        0gMUPGYP10znKo9HDaB+30xoxdEMtAMN+X4ewGQA+vgfF1NJDMBMrCVjjN9rlmo1A9zilwcsNeIaMUfA
+        a+7HkuiVjH/JKZwHgMnBVEznKo9HDeCC/CxoRRHPCihvHsAXQEHYAEKN/3Exp56e3TNTDMAmusKYJDu7
+        PdH1w4neWuFkUQrg7ZXqmkfY144YHKthwTnKAMbMcwrlAQarIVusBnDqBb2yNc2EmgdgA/CFCXBB4Ey6
+        AWDswgZQWfG007O7Z4kB2AnPu/LGvUB08JCTQSmEQnXN2E3Huw+PhQlUV70uTFZ6hc7T7E1BpnOVR5cB
+        YPwPzbABQEu+nQh0GwC6KmwAPJkhBuAQ49+zVctz7VCipWuczElhYA39umF2TBI9NwDzuXoQUdFhpzAx
+        AHsxLr/H3lNgOld5ZAOodH6PHGjF0UxZE4G+MgAe/7MBuFcAcDGnn5rZNTtVDQAtHC/t9X+c6KeDTuYI
+        6OdCojtVTBCb9ASuFMBw0GJjiTVWvPapvfcBG7ZM5yqPLgNA9/8MRzuhDMA38wChDEBfAcDFpKwBYJ84
+        loewW+zxt5yMEfwOT6jY1FWtMmIV6976cIkJyVbjnQJECSwB3jgmtolNywB6Fu9zGYBpJSBQBsArAClr
+        AEhkJNmFfYne+dLJGEFIvPsVUf1+3txgEy6xNPnIG04BogBuGUbvxXTscOkyAPSY2QB4JSAQBoBJilAG
+        ULlSZuccdZF7U8UAkMDoFv5VjTOxBCYID9iZh5tzELtEmABWIup0JXp5qVOACIDnBMDgY932fNQAcvNy
+        oRVHMyYDgMZ8bwDuPQBnKqaUAWAci5YFt9LiTjpBZMCdeU1U7BDDeM8J4PiYe0AXftLLRIVhTAriZqix
+        823xe7HD0WAA0IxuAL7dC1CeAWA8k1IGwOLHuHDXz07GCCLGbhU7bNVNlAmgFce5sC9jzmJ7N6Z+WzXu
+        c8CzE/CshAZD7W6/V7dBhzAAaCfwBpBSPQCr26+SCPvCkcCC2LBnP1GzUY4JJGhOAJOQOB+elIReSJtJ
+        NtGbQxnwN0zomr4bLZPZAFKmB4DkwOTVNUOItu1xMtgHOHCwiH7YuJ1WfPUtLfnPclqw6EOat+Bdmu8Q
+        P7/yxofW35arz3yvPovv+AXb99pP68HGnUSZAGjNDSiho5sPQvSxjvVDMdkNAPc4J7UBIDFxd9kl/e3H
+        bB1LbN2+i975cCXNemohDRw9mzoWTKBbOo2gJm0GUaPb76WGre6h61oO+A3xO/wNn8Fn8R18d6Y6xjsf
+        rKQt6pjHEt+prvef77RjnEgTSBQNBgDNJJUBnJHMBpDe3d4FhqfkHAts2rqT5i98zxJty66j6PrbBlqi
+        hqCbtx9KN3ccroR9H93auWziM/gsvoPv4hg4VsuuI+meUY9ZPYZNW3c4Z00sPl33a5xNdRBkJqMB6DcC
+        oTvjGEDy7QPALbwYF879j5OpCUJp6S+09LNVNHLS3y3xXtdSCb71ILqpw/DfCTtW4pg4Ns6B/9838Wnr
+        3KWlpU5pEoP5H9ixjvbBG36lywCwBMhDAP2GoIAbQEbH3GQ0gKrtvXmsVLiA8Be/v5wKhsywuu3gTarV
+        dos2XsS5rPOqngHKsPj9zxNqBCNUrBFzU10Elb8aQJfzoBVHM2IAfiaWjjDp13wM0aEjTnbGGZ8u/4b6
+        DZt5tHtvEmgi2aTNYKss/YY+TJ8sT8zdTYeL7eVBa1LQVSdBpRhAAInNI1gHTsQuvx279tGEGXOpseqG
+        gyYxHkva5bqXxj80l3bs3OuUOn7AbsFsNQxAHZjqJmgUAwgg8UCLRNzc8+7SldS211hrth4z9CYB+oEo
+        G+YI7ug51lqFiDeefNuuA1PdBI0pZADBXwXgrn/L8fadYPFCcXEJzZyzwJqFb9Z2CLXoYhaen4gyoqwo
+        88NPLrCuIV74RcX+tgnOjUOuOgoaxQACRGwGwcMkvvjeycQ4YPfen+ne0bOpQYu7fd3qhyLK3KDFABo4
+        +jHavecn56q8x1c/2MuC8dqgkyimjgF0VwaAjRyosAAyV7FaO6L7/uFkYBywcfMO6nbXFLqulb3kFmTi
+        GvLumkwb1DXFC6OeV0MBVSeoG1OdBYHQhNJGkhtAbsfcjKHFe7NGKcceEUzWGUJ0URxv8sGW3Xa9H7CW
+        2Vp0GWkUVZCIa8C14Jq+37DNuUpvsWs/0cWqTmqrujHVWRBoaWKoMoD6SWwAJ17UMTdtYvHejGlE6ZMD
+        yClElUcTPfyJk3keY8OmHy2hYDY9GcTPxLXgmtr2esAyuHhg1qeqbpQJoI6MdedzWpqYqAzgf5PdAMYr
+        A3gQFxs81niA6C8PE+2Pw1N8d+7eR136TUqalt9N7gl07jvRWtL0GvsPE106064jU935nZYmxosB+Jpn
+        jFQtzUdOxnmIQ4cO053DZ1kbauIpfhw7HJq+6wVx7IatBlL/4TOpSF2z13hU9cwqqzoy1Z3fKQbgc9Ya
+        p8b+04n2FDrZ5iGmPPICXdvibqNoYiWLGrPy2M/fvN1QuqHtYGp2xyBq2sYmfsbv8Dd8Bp+Nmxl0uc9a
+        2Zg86wXn6r3D3iKii1Udoa5MdehnigH4nGeMIhqzxMk0D7Ho35/StR5v8NFF37zdEGp8+0Bq2PJuuq7F
+        XXTtrXeWSXwGn8V38N14mAGOiU1Nry/xfjJl7L/tnpqpDv1MMQAfs+4EonqK33p8S/zmrTuVsO6zWl6T
+        UCIlC9W+c+9eS8i6sCMhfw/HwLFwTC+NoHn7Yda/m7Z4uzy4XtUR6gp1ZqpLv1IMwMesOpqo43wnwzzE
+        0HFzqOFtAy0TcAskUkKYN3ccYYmVBewWdbTkY+HY3CMwlSES4pqxW3DoAx6+ntdBJ1VXqDNTXfqVYgA+
+        ZhXV/X9llZNdHmHJf1Ycvbc+VkKQN7Qd8huxxoN8bJzLq54AYrD4veVOVLzBAlVXVcQAEoakNgBMKF0y
+        nWifh4/IO3iwiDr3m0jN7hhiFEW4ZBGiZY6n8N3EuZq0HvibMkRL3DfQqe9ET59B+JM61J8fCtZkoBiA
+        T4mWpO9CJ7M8wvyF71r75E2CCJcQHrrjjW4bkFDxM3FOnNuLIcG1KhbzFrzjRMcb9H81WL0AMQCf8iyV
+        RAtWO1nlAfYfKKQO+ePphhgm/lj817eyJ/lMAk0EcW6UIVYTQCza54+jn/d7t8b6qqoz1J2pTv1IMQAf
+        ss54ovNVWX/c72SVB1iwaKnV4pmEEAmvb3VsWn43bROI/XoQEzya3CvsOEB0gaq72qoOTXXrN4oB+JDV
+        xhC19vCuv5KSUsof/BA1bTPYKIJwiJYWa/R+ED8TZUGZYukFNL1jMPUZNJ2KS7x7fkAb3CWI+wMMdes3
+        igH4kNj8M8XDJ/2u+Gq99eisWwwCCIcQWDMlFD+Jn4kyoWyxmABuGFr+5TonWrHjQVV3QdkUJAbgM6Yp
+        Vruf6J3vnGzyANMee8na729K/vIIYeF5/Sbxhc+7rY09vCvwuhYwEttMfv09/y068oYh0zWUR8RmqoqR
+        V3hX1d05qg5Rl6Y69hPFAHxGjP/PU+Xc5tF9/4VFh6zlrmh3/UFUjW67J8rW3xZ3g1v609U35tNfm/Wi
+        K5v2oCuadLeIn/E7/A2fidYIUDaUMVoDQGw6FUygg4Xe3G6JusMcDurSVMd+ohiAz1h9LFGTJ+3nznkB
+        vJfP6v6H8XYeNyGoG9sPjUr8EPO1t/anq27oTZc37kaXNcqzeHljsJtD+3f277tZn8V3bCMwHzcUUUaU
+        NRoTQGzw8pHPv/BmGIC6azqH6FxVl6Y69hPFAHxGLCH1ecXJJA/w9Ly3ot75BzE1vj3y1h8CvuamAkvU
+        LO5wyJ/FdyM1gVh7AYjRU3PfdKIWO/IXBGM5UAzAZ/R6AnDw/U9YPQBT0pdFCAnjapPYyiKEiy59JMJ3
+        E9+9unl+VCZwU4dhUZkAegCDxjzuRC12TMVEoKpLUx37iWIAPiNajRe/crIoRmCDS/s+447eARcJISLc
+        sx9J62+1/DGKn2mZgDpWJCaAsqLM0RjAjSpGiNXP+w860YsNL6s6lB5AfJF0BoBZY4wbl25wsihGrPtu
+        syX+mztFd89/JJt+INQGt/RT4o1d/L8yzzpmuCaAska7OQgxwmTg2vXevG7pI1WHmM9J8/ntwWIAPmLd
+        8apC1L9rdzpZFCPeXfqF9Tw8U8KXRbSgkS79NWx5F13ZrKcnrT8Tx8IxGxrOVxZR9mh6AbhN2Ks3C61T
+        dYi6RJ2a6tovFAPwEbF99IKpRNs92gKMd+pHMwEI8eCpPJG0/n+7ua+n4mfimDh2JL0AlD0aA8DTgua+
+        4s3NQTtUHV6o6tLvW4LFAHzEmh4//feRp1+NagMQxBPJ+B/ixBJevAwAx47EAKKdB0CsZj3lzS2YBw4T
+        XabqEnVqqmu/UAzAR8Sjpf/2GNGhYieLYsSEh+dZ3VpTspdFiAf33YdrAOAVTXoowXpvADgmjm06p4ko
+        M8oejQFguDR+xlwnerHhcAlRg9lE1cUA4oakMwDeBOTViz/vm/h01HMAkez+wy4+s3i947XqHKZzu4ky
+        R7sfoLGK1YgJTzvRiw2oQ9Sl3zcDiQH4iDCAxj4wADBcA0DX3J79NwvXK4a7GsAGYLqm8igGIAZwTCkG
+        EJpiAPGhGICP6PUQYMSEpxJkAPEfAvx6s5C5HMxYDWD4+Kec6MUG1GFTMYC4IikN4PoniIpLnSyKEWMe
+        fDbqOYBI7gHA53B3n0m4XhDHjqQsKHu0cwCjpzzrRC82oA5Rl6hTU137hWIAPiKWjK6cRVR4xMmiGDH1
+        sZet5/+bkr0sQjyRPPE3HpuAmDimtRlIncN0bjdRZpQ9GgPAismDj77oRC82FBUTXfWI/18aKgbgI1qP
+        An+IaK9Hz6h8at6bdF2U+wAieQIQuuax3gAUijhmJDcGoczRPiEIsZozd5ETvdiwT9Uh6tLvjwgXA/AR
+        8QCJnClEG/Y6WRQjXnv746g3AkX2HAD7KcEmAXtBuxzhG0C0zwVArF59y5vXMG9UdZir6tLvDwURA/AR
+        8W652qrF+GKrk0Ux4vMv11GTNtE9DASP3A631QWtXkDzPp72AuzWv0/E5UDZTddUFvG8RNwSvGzlWid6
+        seHLbbb4UaemuvYLxQB8RNwNiKfJvv2tk0UxYuv23dSy60i6qeNwY9KXRbSg0TwMBI/58sIEcAwcy3SO
+        UERZo50ARIxaqFht3e7Nm1jfXmc/29HvzwUUA/AZzxxF9OQyJ4tiRElJCfUaOM16DZYp6csiRBTJDUE2
+        7aEAZu1jMQF89+jMfwStPz4f7Y1AzdoOpZ73TKXiYm8eDz5H1SHq0lTHfqIYgM+IpBn+lpNFHmDSzPlR
+        3Q8ARjoMAPF5CDHanoDV8jfpYR0jmnNH0/0HEaOJD89zohY7UIdiAPFFUhoAXgqCF0t4hTeWfBrTMwGb
+        3RHZU4FAFu5VavzOonYL3U3+zFXNe//mGOESZURZo2n9QcTo9cWfOFGLHW3nBuPlIGIAPiP2Alw+k+ig
+        R3sBNm/baU1w4R3+psQvixBTNL0AJr6HHXy4ndfaKNTIFrpO/A5/w2fC3e1nIr6HskZjAIgNvrtpqzdP
+        YsE+jitm+f9WYFAMwGfErDGeIrPqRyebPMA9Ix+1ZrhNyV8e7V5A9G8FgjBBfL/Bzf2sJ/5izwCIn/E7
+        7u5HK3679Y/+7UBYKRlw3yNOtGIH6g516PcVAFAMwIesosaOc79wsskD/PP1D6yn3ZiSP1yGe29AWWSR
+        u2n6bLhEmfC6cFOZw+W1KjYvv/a+E63YMU/VHerQVLd+oxiAD4nkuftfTjZ5gB279lGrvFHWY75NAiiP
+        aFljfz1Y/BjtMwBBxARLpT/u9Gj3lcIAVXdiAPFH0hoA9o9f8xjREe9eWGutBjRsFd1qAAiBRb4sGF+i
+        LNEu+zEREy9n/1FneKqT358ExBQD8CExdqylEmilRzsCgdVrN1ivB492mQyE0G5o64+3BKMMKEss4kcs
+        mqiYrPrmBydKsQM7ALH/Pwjjf1AMwKfE66WnfeBklUcYMfHpqPcEMCG4WCYFvSDOHcuSH/P62wfS8Ane
+        3P/PmP5hMN4IxBQD8CnxeumbvHk4zVGsWvuD1eJFsySoE8JD15vF6BZovMjnirXbD+JFIJj9//qb753o
+        eIOb/m7XnalO/UgxAJ8SXUjcGPT1diezPMKEGfOi3hikEwLEBFokbw+KhTgHzhXtu/9+wy72rb/jH/Lm
+        CcCM1T/a7wEISvcfFAPwMc9Uw4Bx7zrZ5RG279hDLbuOiup9gW6yEPEcfhapW7ixko+Jc+jnjIW4dsz8
+        b/txtxMVbzBB1RWGbqa69CvFAHxMrAb89RGiQo/eE8BYuGgpXdsitrVznRAlluLwJB4WbSxmoH8fx4xl
+        mc9EXPsrb6jBuocIyhOA3BQD8DnxhtlXVztZ5iGGjZtjPQDDK2HhOGwEaK3RXdfFXJYhuD+D7+IYLHwv
+        y4hlvyEPPEm//OLRk1cd/GtNMN4G7KYYgM+JG0puf87JMg+BjS9tetxPze6I/FbhsqgLFuN1rBjgTT3Y
+        Sfjrzj+b/H/8DZ/BZ/Ed93G8Iq61tbpmDIO8Rut/BOPmHzfFAHxOvF4aj5b+dKOTaR7is5VrrZnwGx3R
+        eU0WMQsZ6+4gViH4Bhzel+D+rNfENeJaP1vxjXP13mHZZruOgjT5xxQDCADRtezqzcNqf4cFi5ZaqwKx
+        Lg1GwhZdbJr+Fg/i2nAvxCuLvB33M7q9RFQlgN1/UAwgAETLgufLf65amnjgqblvUgPVJefWOJmIa8K1
+        zXnem6f9urFii73tN4itPygGEBCiF9Deuy3rv8PsZ/9F1yqhJLInEG9isw+u6bFnPLyzygXUSRAn/5hi
+        AAEh5gIwybRkvZN5ccATz71udZWjvWvQT8Q14Foef/Z15+q8x5JviaqqOkHdmOosCBQDCBCxxfS62USH
+        PLxL0I0XFr5HjVvfSze0xXZbs7j8TJT5hnZDrVeizV/o8S4qDYdVHTR8PFjbfk0UAwgYK48keig+c1lH
+        8f5HX1o75RrFeOPQsSCEj7LjGuKJh5fadWGqoyBRDCBgxP0B6HKu8+bxdSHx/cbtdOfwWdYYOghDApSx
+        QYsB1H/YTPq/Dducq4gP1u/6tS7c9RM0igEEjBmKmHRq+ax3rxEPhSPFJdYKQfP2w3zdG2h0+0BVxqHW
+        e/2OHPF437QL2EB423N2HaAuTHUUJIoBBJTofuLe80Tgm2830qD7H7e20eJ2YpMIjwVRFmxnvnfMbFqz
+        boNT2vhiRpJ0/ZliAAEl3juHG08+TkzeW/j3Byuoz6CHLNE1bo13DiZ+yRDnxLlRBpQFZUoUPtloP+rb
+        7y/8jIRiAAElup+Ygf7fGUQ/HnAyNAEoLimhxe8vp7vve4Sa3jHYuq++ebuhRrF6SZwD58I5ce7F73/u
+        2Wu8wsEOFeO/PGzHPBm6/kwxgAAzY5L9+imMSYtLnUxNIL5Y9R1Nf/yf1CF/vDX7jlYZAo3mZaRu4hg4
+        Fo6JY3coGE/TZ79MK7+O40aIEChRscXNPog1Ym6qi6BSDCAJiDHpPfHb71Iuft5fSEuXraKZcxZQwZAZ
+        1jIc9hLgHgM8gxBddtyJh1b8xvbDfkP8Dn/DZ/BZfKexEjxuCioYPMM65tLPVqlzHHTOlnjc+0Zyjft1
+        igEkAbEsiCfRTPHu3RZRA/fZb9m2kz5atprmL3iXHnzkRev+exhD1/6TqH2fcb8hfoe/4TNT1Gfnqe/g
+        u3ilmdf37EeDqf+xYxvk3X5lUQwgSYhXUeGOtCc+dTLXZygtLaXCosO0/0Dhb4jf4W9+xJOf2S/4QGxN
+        MU8GigEkETE7jfsFnl3uZLAgajy3wo5lnSTY7FMWxQCSiJidxu40JO6cZU4mCyLG0yp2eE07YplMM/4m
+        igEkGS0TUD0B7FRL1EahZMJDS+3YIYbJLn5QDCBJiXEr3lAz9E2iYz+VFgwMf8ue8EvmMb+bYgBJTDyl
+        BstXHeYT7S50slzwO+xRsemkYoRYBfXJPtFSDCAFiJ4AnlmPx1cJfouVKibXPGrHyBS7ZKcYQAoQY1lM
+        aqF1m/OZk/kCemoZUZoTm1QY75soBpAiRILjtdXYzoonDG/a56ggBbH5J6I8FQPEAjFJVfGDYgApRrR4
+        SPwLpxI9k4L7BZ5T13zhNDsGiIUpRqlEMYAUJFo83NYKEbR6jmjZJkcdSQy8vAM3TWFnH649lVt9nWIA
+        Kc6qo+1u8F2vEX3n7ctyfQFc093/sq8R12qKQSpTDEBIdSfYvYGsyUTD3kwOI8A1YF0f14RrwzWarj3V
+        KQYgtIguMe4lgFgyJxHdqXoEnwVwaICuPnozuAZcS6rs6IuWYgDC35GNAGNlzBHMXWk/Ecev2KnKNvcL
+        e4zPcxvJ9NiueFIMQBiS2DeAG4swcXbRNKKChUSvrvaHGaAMr64h6qfKhLKhjChrqu3ki5ViAMKwiEk0
+        PG8AE2kQXKcXiGZ/QrR8C9HPhxxVxhE4B841+1OizurcF023y4IyoWymMgvLZwoZQMkeMQBviNtk8U48
+        a5igfr70YaJ2c4nGLCGap7rimDvYsJfowOHIbkTCZ/EdfBfHwLHG/Ns+Ns4BoeOcOHcyvJTDDxQDEMZE
+        dLlhAuh+Q5y4lRaPK8+ZQnTZTKJmc4jaPG+/Qx+Tc4MXEQ16wyZ+xu+6v0x0h/oMPovv4Ls4Bo6FY+LY
+        OId0772nGIDQc+L5eZiEw4TcuWNtAaO7DkGjy64Tv8Pf8Bl8Ft/Bd5P1GXx+oxiAUJjCTA0DuKRzjhiA
+        UPh7HjWAv+TlQiuOZgJtACcpnqKIi6iiWNk2AFkFEArddBlAZUcz0A40BC2JAQiFycpkNoDTFNGdcQyg
+        RAxAKHTRYAA8BEgaAzjjj7WuSEsbd2RLxtTfB0AoTGVCE9BGxYxr0qEVRzNJZQDo0pydNrbwy8zp5iAI
+        halKaCJtbNFXSiPVHK0E2gBOUNQNAI5WVbFSvVE/vZ71sDkIQmGqEpqoN/qnN6ARRyvQDLTDBgBNBd4A
+        Tqo1+IfJWTPNQRAKU5XQRO0hG6cojfzJ0UogDeAPimUZQMVqPZa0tYYASfZ+d6EwFkIT1Xu+287RTFkG
+        AI0FxgAqKp6qiIs5S7HKibk34o7A3bISIBTahBaUJvacWP9W7ALE+B9aYQOAhgJpAOjKsAFgWQMXhQmO
+        U+uO3L1Q5gGEQpvQQt2Re15ztAKNQCvQDP4PDUFLvjYAUDeA/1Z0GwCczTKAc/MWd8l8yBwMoTDVmDmD
+        6Jzu73RV2sAE4DmOVtwGAE3pBsC6O+ZwGwAmKdgA+H4ANoCzFatVqFS9Vr2xh9bLcqAw1QkN1Hvg8HfH
+        n5lW29KGTTYAvg+ADQDa8q0B8DCADQDrlu4bgmAA1fG7Gv1XDJHVAGGqM2sWUY07vxwKTTjagEZ4DwAb
+        ALTEBgCNcfffFwYAuA0AXRX3ZiBeCTgXPP6MunXSxh76VoYCwlQlch894ePPyKrLunA04l4B8O0mIIZu
+        ADwPEGolAGOcmoqnn9Pp9c6WAciSoDDVqHLeGvt3XoSxP1p7aALa4BUAHv/7egWAYTIAngfARejzABjj
+        oKtTS/HM2kO3vpT9iCFAQmGycoLq+qucrz1k68vQgKMFaMI9/g81AehLAwDZANzzADwMwMXyMAAXfe6J
+        da/JTnug8FtrWVAePyVMdkL82PY7rnD9iZnX5ehaUIQ2oBHu/rvH/2wArDffgAvEvQCeBwg1DIDT1VCs
+        o1j1zBumXZ8xuXiftSogJiBMVqrctnJ8cvFPlW+a3gi572gAWoAmTN3/UON/XxkAoBuAexhgWg1g56un
+        WKVqmxfbpk8pOSQmIExKsvinlByu2vYlbPlFVx+5z91/aAK/02f/A9H9Z7ArsQHowwA4mb4aoPcCsP6Z
+        ht9Va7+wo3LHnzE5IiYgTBpC/JjsnnJkf7WOr3ZCrjs5z62/Pvnnnv33ffefwQVz9wL0bcGmXgBmP7EM
+        ggchnHXGrU/enD6xaCPWR2V1QBh4qhy2cnlC0aYzWs25ReU4uv3IdeQ8j/3drT9P/oWa/felAQAmAzD1
+        AjDLyb0AXhFAdyhD8ZyTL8m7tN7oHW9jo1DmNFdAhcKAELmLHK43ZsfiP13c/TLktpPjetdfH/ubWv9A
+        dP8Z7E6hegHuuQC4IYLCQwEEJtP5uU6N/suGpU08vAMOKncPCoNC5CpyVuXuTuQwctnJaeQ2chw/c9cf
+        GoD43WN/bv19P/nnhtsA3HMBvCKAXoA+FEBAECg2AfCcky+644o6g9fPTp90ZC+Cak2kyNBA6DdiY4/K
+        Tau7P7l4b50h6x8/qX77K5HDWj4jt5HjGPbqXX9oAZooa+zv+9afwS5VVi9AnxBEAPT5ADYBdJWyFTFZ
+        Ur3S/3S9ptbAr6fUe+DgmowpdqCzZtgPU8T/xRSECaPKNeQccg85aPVQ1f+Rm7UGrppS6dIe1yBnndxF
+        DnO3P5T4uetf3sx/IAwAYAMA9V6AeyjAJoAxkG4CPBzAZEmWIjZMIJjoJZxX5ZaprWvevfLBuqN2vpc+
+        7tCm9AklReh2YaZVKIw3reHohNIi5B5ysObdX0ytcstDrZGbiix85CxyFzmMXEZO6+LXx/2miT9u/VlH
+        gRE/wG6FgruHArhAdHP0+YBQJoCZUgQTDspGAEdFQPGZtD+cVu9/Kl3Ru+lZt8zqcHbbefnndHp1wNmd
+        FgiFntPKLZVjZ93yWAfkHHJP5SAEjlxEriI3WfjIWeQufh9K/Pqsf3kTf4EyAIANQDcBXBguUJ8P0HsC
+        PBzgiUHMlPKQAIHGOIqNAC9QAPUuFoKNz+NfJn4vFEZLPZf0nOIhKuchCx85yq0+chE5jFwuq+UvS/xs
+        AIEDuxZfBPcCwjEBzIzyEiH3BnQjQPARaHZcNgR0wZjnh+AFQmEZNOUMqOcWCx5EDiIXkZO68LnVRw6j
+        QYP4kdvltfzQiFv8gTQAQDcBfSiAC8VQwGQCvDrAQwIEz20E7MK6GcB9QVQIkytJKIyFek5xniHvdNEj
+        J93CR6vP6/zIaZ7wc4vfPe4PdNffjUhMgFcHeF5A7w0gmGwE6FYh0HqXjA2B5wy4ctgghMJIyXnERG6x
+        4JnIP+Qid/V14SN3kcMQP3IauY0cTxnxM8I1AV4ixJooAsa9Ad0IuEeAYLMZsCHAgbmH4DaH8qh/R5ga
+        NOWBm/rnOb+Qayx65CALH7nJwtdbfe7y81JfuOJPOgMATSaA8Q+CgWUQvTegGwH3CBBYBBjDA90Q2BTY
+        GHRzMJE/E85nhcnJcHNAzykWuy545CJyUm/xWfi8wQc5zev8yHV9zJ/U4mfoF8YmwEagmwCckfcKIHBw
+        TgSR5wdgBNwrYDMAuSJQKVwx6Iox+fdM/W9MrlhhctNU92Co/MD/ubHhhofzDjnIokduIkeRq8jZUK1+
+        yomfoV+g2wTcvQF9WAD3RDBBniPQewYIPpsCk80B/+pGoROVKRSC7tzgvNHziHOL8w25x6JHPiI3WfTc
+        4puEDyLnU0r8DP1CceFsBCYTMBkB9wpA7hnohuAmV5JuFHrlCYXMULnhzinON72lNwmfu/u6+N2tfkqJ
+        X0coE9CNQDcDHhqwGeiGoJsCGwMTlSQURks9l0Bd7LrgddHrLb5b+CJ+DfrFh2sEuhmwIeimwMYQilxx
+        QmEomvIG1HOM847zkEXPwue8FeGHAT0YoYwglBmwITC5QnRyZQmFkdCUS3qu6YJ3iz6U8HXxCzToJgCy
+        CTDdZqAbApuCTt0ghMJY6c4vPfdAk+iZbuGDghDQgwRy8PSAgiZDYLorRyiMhZxT7jwDOQ910XPOukUP
+        CiKAO3h6YHUzYOqVIRTGi6bc03MTdOeuIAa4g8l0Bx3UK8NdSUJhtHTnlpum/BTECaZgm2iqKKEwUppy
+        KxQFxxCmChEK40GBQCAQCAQCgUAgEAgEAoFAIBAIBAKBQCAQCAQCgUAgEAgEAoFAIBAIBAKBQCAQCAQC
+        gUAgEAgEAoFAIBAIBAKBQCAQCAQCgUAgiBQVKvx/noXG1/BRv6sAAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="Label1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -597,6 +809,9 @@
     <value>True</value>
   </metadata>
   <metadata name="TabPage2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="TreeListView1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="TreeListView1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
