imports raw data files

--- a/src/mzkit/mzkit/pages/dockWindow/tools/TaskListWindow.resx
+++ b/src/mzkit/mzkit/pages/dockWindow/tools/TaskListWindow.resx
@@ -117,4 +117,59 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="ImageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="ImageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB4
+        CgAAAk1TRnQBSQFMAwEBAAEIAQABCAEAARgBAAEYAQAE/wEZAQAI/wFCAU0BNgcAATYDAAEoAwABYAMA
+        ARgDAAEBAQABGAYAARsbAAP+AREBQwGPAREBQwGPAREBQwGPAREBQwGPAREBQwGPAREBQwGPAREBQwGP
+        AREBQwGPAREBQwGPAREBQwGPAREBQwGPAREBQwGPAREBQwGPAREBQwGPAREBQwGPAREBQwGPAREBQwGP
+        6gAD/QERAUMBjwERAUMBjwERAUMBjwERAUMBjwERAUMBjwERAUMBjwERAUMBjwERAUMBjwERAUMBjwER
+        AUMBjwERAUMBjwERAUMBjwERAUMBjwERAUMBjwERAUMBjwERAUMBjwERAUMBj+oAA/0B6QHoAecB6QHo
+        AecB6QHoAecB6QHoAecB6QHoAecB6QHoAecB6QHoAecB6QHoAecB6QHoAecB6QHoAecB6QHoAecB6QHo
+        AecB6QHoAecB6QHoAecB6QHoAecB6QHoAecB6QHoAefqAAP9AekB6AHnAekB6AHnAekB6AHnAekB6AHn
+        AekB6AHnAekB6AHnAekB6AHnAekB6AHnAekB6AHnAekB6AHnAekB6AHnAekB6AHnAekB6AHnAekB6AHn
+        AekB6AHnAekB6AHnAekB6AHn6gAD/QHmAcYBWwHlAcUBWQHkAcMBVgHjAcIBVAHiAcEBUgHgAb8BTwHf
+        Ab4BTQHfAb0BSwHeAbwBSAHdAboBRgHcAbkBRAHbAbgBQgHaAbcBQAHZAbYBPwHZAbUBPQHYAbQBPAHY
+        AbQBOuoAA/0B5wHIAV4B5gHGAVsB5QHFAVkB5AHDAVYB4wHCAVQB4gHBAVIB4AG/AU8B3wG+AU0B3wG9
+        AUsB3gG8AUgB3QG6AUYB3AG5AUQB2wG4AUIB2gG3AUAB2QG2AT8B2QG1AT0B2AG0ATzqAAP9AegByQFg
+        AecByAFeAeYBxgFbAeUBxQFZAeQBwwFWAeMBwgFUAeIBwQFSAeABvwFPAd8BvgFNAd8BvQFLAd4BvAFI
+        Ad0BugFGAdwBuQFEAdsBuAFCAdoBtwFAAdkBtgE/AdkBtQE96gAD/QHpAcoBYwHoAckBYAHnAcgBXgGT
+        AXABBQGTAXABBQGTAXABBQGTAXABBQGTAXABBQGTAXABBQGTAXABBQGTAXABBQGTAXABBQGTAXABBQGT
+        AXABBQHbAbgBQgHaAbcBQAHZAbYBP+oAA/0B6gHMAWUB6QHKAWMB6AHJAWAB5wHIAV4B5gHGAVsB5QHF
+        AVkB5AHDAVYB4wHCAVQB4gHBAVIB4AG/AU8B3wG+AU0B3wG9AUsB3gG8AUgB3QG6AUYB3AG5AUQB2wG4
+        AUIB2gG3AUDqAAP9AesBzQFoAeoBzAFlAekBygFjAegByQFgAecByAFeAeYBxgFbAeUBxQFZAeQBwwFW
+        AeMBwgFUAeIBwQFSAeABvwFPAd8BvgFNAd8BvQFLAd4BvAFIAd0BugFGAdwBuQFEAdsBuAFC6gAD/QHs
+        Ac4BagHrAc0BaAHqAcwBZQHpAcoBYwHoAckBYAHnAcgBXgHmAcYBWwHlAcUBWQHkAcMBVgHjAcIBVAHi
+        AcEBUgHgAb8BTwHfAb4BTQHfAb0BSwHeAbwBSAHdAboBRgHcAbkBROoAA/0B7QHQAWwB7AHOAWoB6wHN
+        AWgBkwFwAQUBkwFwAQUBkwFwAQUBkwFwAQUBkwFwAQUBkwFwAQUBkwFwAQUBkwFwAQUBkwFwAQUBkwFw
+        AQUBkwFwAQUB3wG9AUsB3gG8AUgB3QG6AUbqAAP9Ae4B0QFvAe0B0AFsAewBzgFqAesBzQFoAeoBzAFl
+        AekBygFjAegByQFgAecByAFeAeYBxgFbAeUBxQFZAeQBwwFWAeMBwgFUAeIBwQFSAeABvwFPAd8BvgFN
+        Ad8BvQFLAd4BvAFI6gAD/QHvAdIBcQHuAdEBbwHtAdABbAHsAc4BagHrAc0BaAHqAcwBZQHpAcoBYwHo
+        AckBYAHnAcgBXgHmAcYBWwHlAcUBWQHkAcMBVgHjAcIBVAHiAcEBUgHgAb8BTwHfAb4BTQHfAb0BS+oA
+        A/0B8AHTAXMB7wHSAXEB7gHRAW8B7QHQAWwB7AHOAWoB6wHNAWgB6gHMAWUB6QHKAWMB6AHJAWAB5wHI
+        AV4B5gHGAVsB5QHFAVkB5AHDAVYB4wHCAVQB4gHBAVIB4AG/AU8B3wG+AU3qAAP9AfEB1AF1AfAB0wFz
+        Ae8B0gFxAZMBcAEFAZMBcAEFAZMBcAEFAZMBcAEFAZMBcAEFAZMBcAEFAZMBcAEFAZMBcAEFAZMBcAEF
+        AZMBcAEFAZMBcAEFAeMBwgFUAeIBwQFSAeABvwFP6gAD/QHxAdUBdwHxAdQBdQHwAdMBcwHvAdIBcQHu
+        AdEBbwHtAdABbAHsAc4BagHrAc0BaAHqAcwBZQHpAcoBYwHoAckBYAHnAcgBXgHmAcYBWwHlAcUBWQHk
+        AcMBVgHjAcIBVAHiAcEBUuoAA/8B8gHWAXgB8QHVAXcB8QHUAXUB8AHTAXMB7wHSAXEB7gHRAW8B7QHQ
+        AWwB7AHOAWoB6wHNAWgB6gHMAWUB6QHKAWMB6AHJAWAB5wHIAV4B5gHGAVsB5QHFAVkB5AHDAVYB4wHC
+        AVTtAAHzAdcBegHyAdYBeAHxAdUBdwHxAdQBdQHwAdMBcwHvAdIBcQHuAdEBbwHtAdABbAHsAc4BagHr
+        Ac0BaAHqAcwBZQHpAcoBYwHoAckBYAHnAcgBXgHmAcYBWwHlAcUBWQHkAcMBVu0AAfQB2AF8AfMB1wF6
+        AfIB1gF4AfEB1QF3AfEB1AF1AfAB0wFzAe8B0gFxAe4B0QFvAe0B0AFsAewBzgFqAesBzQFoAeoBzAFl
+        AekBygFjAegByQFgAecByAFeAeYBxgFbAeUBxQFZ7QAB9AHZAX0B9AHYAXwB8wHXAXoB8gHWAXgB8QHV
+        AXcB8QHUAXUB8AHTAXMB7wHSAXEB7gHRAW8B7QHQAWwB7AHOAWoB6wHNAWgB6gHMAWUB6QHKAWMB6AHJ
+        AWAB5wHIAV4B5gHGAVvtAAH1AdoBfgH0AdkBfQGTAXABBQGUAXEBBgHyAdYBeAHxAdUBdwGTAXABBQHw
+        AdMBcwHvAdIBcQGTAXABBQGTAXABBQHsAc4BagHrAc0BaAGTAXABBQGTAXABBQHoAckBYAHnAcgBXvMA
+        AZMBcAEFAZMBcwEKBgABkwFwAQUGAAGTAXABBQGTAXABBQYAAZMBcAEFAZMBcAEF/wD/AAkAAUIBTQE+
+        BwABPgMAASgDAAFgAwABGAMAAQEBAAEBBQABIAEBFgAD/wEAAeABAAEHCQAB4AEAAQcJAAHgAQABBwkA
+        AeABAAEHCQAB4AEAAQcJAAHgAQABBwkAAeABAAEHCQAB4AEAAQcJAAHgAQABBwkAAeABAAEHCQAB4AEA
+        AQcJAAHgAQABBwkAAeABAAEHCQAB4AEAAQcJAAHgAQABBwkAAeABAAEHCQAB4AEAAQcJAAHgAQABBwkA
+        AfABAAEHCQAB8AEAAQcJAAHwAQABBwkAAfABAAEHCQAB/AHZAZ8JAAP/CQAL
+</value>
+  </data>
 </root>
